@@ -27,11 +27,11 @@ check_PROGRAMS = $(TESTS)
 
 test_job_SOURCES = tests/test_job.c
 test_job_LDFLAGS = -static
-test_job_LDADD = ../nih/libnih.la process.o job.o
+test_job_LDADD = ../nih/libnih.la process.o job.o event.o
 
 test_process_SOURCES = tests/test_process.c
 test_process_LDFLAGS = -static
-test_process_LDADD = ../nih/libnih.la process.o job.o
+test_process_LDADD = ../nih/libnih.la process.o job.o event.o
 
 test_event_SOURCES = tests/test_event.c
 test_event_LDFLAGS = -static
